<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_store"
            android:title="@string/item_inicio" />

        <item
            android:id="@+id/nav_calendario"
            android:icon="@drawable/ic_file_document"
            android:title="@string/item_Solicitud" />
        <item
            android:id="@+id/itemFigitacion"
            android:title="@string/item_digitacion">
            <menu>
                <item
                    android:id="@+id/navFuenteIngreso"
                    android:icon="@drawable/ic_file_document"
                    android:title="@string/item_FteIngresoDep"
                    />
                <item
                    android:id="@+id/navRegistroPersona"
                    android:icon="@drawable/ic_file_document"
                    android:title="@string/item_RegistroPersona"
                />
            </menu>
        </item>



        <!-- Sección de configuración -->
        <item
            android:id="@+id/configuration_section"
            android:title="@string/item_Configuracion">
            <menu>
                <item
                    android:id="@+id/item_Ajustes"
                    android:icon="@android:drawable/ic_menu_manage"
                    android:title="@string/item_Ajustes" />
                <item
                    android:id="@+id/nav_log_out"
                    android:icon="@android:drawable/ic_lock_power_off"
                    android:title="@string/log_out_item" />
            </menu>
        </item>


    </group>

</menu>
